--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,12 @@
     <div ui-view ></div>
     <script src='app/javascripts/scripts/turn.js'></script>
     <script src='app/javascripts/scripts/socket.io.js'></script>
+    <script>
+      function MyFunction2( arg )
+  	  {
+  		  alert( arg );
+  	  }
+    </script>
     <script> var socket = io();</script>
   </body>
 </html>
