add pic service and webgl script to index

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <script src='javascripts/services/user-service.js'></script>
     <script src='javascripts/journal/journal-directive.js'></script>
     <script src='javascripts/bulletin/bulletin-directive.js'></script>
+    <script src='javascripts/services/picture-service.js'></script>
 
     <!-- ************ superstatic ************ -->
     <base href='/'/>
@@ -30,6 +31,7 @@
   <body>
     <!-- *********** view ************ -->
     <div ui-view ></div>
+    <script src='javascripts/webGLRelay.js'></script>
     <script src='app/javascripts/scripts/turn.js'></script>
     <script src='app/javascripts/scripts/socket.io.js'></script>
     <script> var socket = io();</script>
