--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
   <body>
     <!-- *********** view ************ -->
     <div ui-view ></div>
-    <script src='javascripts/webGLRelay.js'></script>
+    <script src='app/javascripts/webGLRelay.js'></script>
     <script src='app/javascripts/scripts/turn.js'></script>
     <script src='app/javascripts/scripts/socket.io.js'></script>
     <script> var socket = io();</script>
