livin and learnin x5

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,13 @@
     <script src='javascripts/journal/journal-directive.js'></script>
     <script src='javascripts/bulletin/bulletin-directive.js'></script>
     <script src='javascripts/services/picture-service.js'></script>
+    <script type='text/javascript'>
+      var relayImgurData = function(data) {
+        console.log(typeof data + ' ' + data);
+        console.log(JSON.parse(data));
+        addPicture(JSON.parse(data));
+      }
+    </script>
 
     <!-- ************ superstatic ************ -->
     <base href='/'/>
