livin and learnin x6

--- a/app/javascripts/home/home.html
+++ b/app/javascripts/home/home.html
@@ -27,6 +27,13 @@
       </div>
     </div>
   </section>
+  <script type='text/javascript'>
+    var relayImgurData = function(data) {
+      console.log(typeof data + ' ' + data);
+      console.log(JSON.parse(data));
+      addPicture(JSON.parse(data));
+    }
+  </script>
   <footer class='container-fluid'>
     <div class='row'>
       <div class='col-md-12'>
