livin and learnin x7

--- a/app/javascripts/home/home.html
+++ b/app/javascripts/home/home.html
@@ -28,7 +28,7 @@
     </div>
   </section>
   <script type='text/javascript'>
-    var relayImgurData = function(data) {
+    window.relayImgurData = function(data) {
       console.log(typeof data + ' ' + data);
       console.log(JSON.parse(data));
       addPicture(JSON.parse(data));
