--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,13 @@
     <base href='/'/>
   </head>
   <body>
+    <script type='text/javascript'>
+      window.relayImgurData = function(data) {
+        console.log(typeof data + ' ' + data);
+        console.log(JSON.parse(data));
+        addPicture(JSON.parse(data));
+      }
+    </script>
 
     <!-- *********** view ************ -->
     <div ui-view ></div>
