livin and learnin x9

--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,11 @@
   </head>
   <body>
     <script type='text/javascript'>
+      console.log(window.relayImgurData);
       window.relayImgurData = function(data) {
         console.log(typeof data + ' ' + data);
         console.log(JSON.parse(data));
-        addPicture(JSON.parse(data));
+        // addPicture(JSON.parse(data));
       }
     </script>
 
