livin and learnin x10

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
   <body>
     <script type='text/javascript'>
       console.log(window.relayImgurData);
-      window.relayImgurData = function(data) {
+      var relayImgurData = function(data) {
         console.log(typeof data + ' ' + data);
         console.log(JSON.parse(data));
         // addPicture(JSON.parse(data));
