--- a/app/javascripts/journal/journal.html
+++ b/app/javascripts/journal/journal.html
@@ -6,21 +6,21 @@
       <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
     </div>
   </div> -->
-  <!-- <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("https://pbs.twimg.com/profile_images/636648691789635584/w5lAgYS6_400x400.jpg")'>
+  <div class='journal-entry'>
+    <div class='entry-pic' style='background-image: url("../../images/screenshot-examples/ss1.png")'>
       <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
     </div>
   </div>
   <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("http://www.kevinboulanger.net/imagestb/treetimelapse3.jpg")'>
+    <div class='entry-pic' style='background-image: url("../../images/screenshot-examples/ss2.png")'>
       <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
     </div>
   </div>
   <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("http://www.nutty.ca/tmp/procedural/procedural_terrain1b.jpg")'>
+    <div class='entry-pic' style='background-image: url("../../images/screenshot-examples/ss3.png")'>
       <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
     </div>
-  </div> -->
-  <!-- <div class="hard inside-cover"></div>
-  <div class="hard inside-cover"></div> -->
+  </div>
+  <div class="hard inside-cover"></div>
+  <div class="hard inside-cover"></div>
 </div>
