--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <script type='text/javascript'>
       window.addEventListener('message', function(event) {
         console.log(event.data);
-        addPicture(event.data);
+        window.addPicture(event.data);
       });
     </script>
 
