--- a/app/javascripts/journal/journal.html
+++ b/app/javascripts/journal/journal.html
@@ -7,17 +7,17 @@
     </div>
   </div> -->
   <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("../../images/screenshot-examples/ss1.png")'>
+    <div class='entry-pic' style='background-image: url("app/images/screenshot-examples/ss1.png")'>
       <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
     </div>
   </div>
   <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("../../images/screenshot-examples/ss2.png")'>
+    <div class='entry-pic' style='background-image: url("app/images/screenshot-examples/ss2.png")'>
       <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
     </div>
   </div>
   <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("../../images/screenshot-examples/ss3.png")'>
+    <div class='entry-pic' style='background-image: url("app/images/screenshot-examples/ss3.png")'>
       <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
     </div>
   </div>
