--- a/app/javascripts/journal/journal.html
+++ b/app/javascripts/journal/journal.html
@@ -21,6 +21,11 @@
       <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
     </div>
   </div>
+  <div class='journal-entry'>
+    <div class='entry-pic' style='background-image: url("app/images/screenshot-examples/ss3.png")'>
+      <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
+    </div>
+  </div>
   <div class="hard inside-cover"></div>
   <div class="hard inside-cover"></div>
 </div>
