--- a/app/javascripts/home/home.html
+++ b/app/javascripts/home/home.html
@@ -21,7 +21,7 @@
       <div class='game-view col-md-7'>
         <iframe id='game-frame' src='https://s3-us-west-2.amazonaws.com/infinite-garden-host/index.html' height='90%', width='100%'></iframe>
       </div>
-      <div class='communication-content col-md-5' style='padding: 0;'>
+      <div class='communication-content col-md-5' style='padding: 0;'ng-click='home.getData()'>
         <bulletin class='row' user='home.user'></bulletin>
         <journal class='row' user='home.user'></journal>
       </div>
