--- a/app/javascripts/journal/journal.html
+++ b/app/javascripts/journal/journal.html
@@ -1,31 +1,9 @@
 <div id="flipbook">
   <div class="hard cover"></div>
   <div class="hard inside-cover"></div>
-  <!-- <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url(entries[0].picture)'>
-      <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
-    </div>
-  </div> -->
   <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("app/images/screenshot-examples/ss1.png")'>
-      <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
-    </div>
+    <div class='entry-pic'>press 'p' to save pic</div>
   </div>
-  <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("app/images/screenshot-examples/ss2.png")'>
-      <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
-    </div>
-  </div>
-  <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("app/images/screenshot-examples/ss3.png")'>
-      <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
-    </div>
-  </div>
-  <div class='journal-entry'>
-    <div class='entry-pic' style='background-image: url("app/images/screenshot-examples/ss3.png")'>
-      <img src="app/images/polaroid-frame.png" alt="journal screenshot"/>
-    </div>
-  </div>
-  <div class="hard inside-cover"></div>
+  <!-- <div class="hard inside-cover"></div> -->
   <div class="hard inside-cover"></div>
 </div>
