messing with journal settings

--- a/app/javascripts/journal/journal.html
+++ b/app/javascripts/journal/journal.html
@@ -1,9 +1,7 @@
-<div id="flipbook">
-  <div class="hard cover"></div>
-  <div class="hard inside-cover"></div>
-  <div class='journal-entry'>
-    <div class='entry-pic'>press 'p' to save pic</div>
+<section>
+  <div id="flipbook">
+    <div class="hard cover"></div>
+    <div class="hard inside-cover"></div>
+    <div class="hard inside-cover"></div>
   </div>
-  <!-- <div class="hard inside-cover"></div> -->
-  <div class="hard inside-cover"></div>
-</div>
+</section>
