--- a/app/javascripts/home/home.html
+++ b/app/javascripts/home/home.html
@@ -19,7 +19,7 @@
   <section class='main container-fluid'>
     <div class='row'>
       <div class='game-view col-md-7'>
-        <!-- <iframe id='game-frame' src='https://s3-us-west-2.amazonaws.com/infinite-garden-host/index.html' height='90%', width='100%'></iframe> -->
+        <iframe id='game-frame' src='https://s3-us-west-2.amazonaws.com/infinite-garden-host/index.html' height='90%', width='100%'></iframe>
       </div>
       <div class='communication-content col-md-5' style='padding: 0;'>
         <bulletin class='row' user='home.user'></bulletin>
