add modal for photos, instructions, remove unused dependencies

--- a/app/javascripts/home/home.html
+++ b/app/javascripts/home/home.html
@@ -22,7 +22,13 @@
         <iframe id='game-frame' src='https://s3-us-west-2.amazonaws.com/infinite-garden-host/index.html' height='90%', width='100%'></iframe>
       </div>
       <div class='communication-content col-md-5' style='padding: 0;'>
-        <bulletin class='row' user='home.user'></bulletin>
+        <!-- <bulletin class='row' user='home.user'></bulletin> -->
+        <div class='instructions'>
+          <p>Activate cursor within the game window to move around.</p>
+          <p>Use WASD to walk and the cursor to look.</p>
+          <p>Press 'p' to save a photo to your journal.</p>
+        </div>
+
         <journal class='row angular-hook' user='home.user'></journal>
       </div>
     </div>
