--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,18 @@
     <link rel="stylesheet" href="stylesheets/font-awesome.css"/>
     <link rel='stylesheet' href='stylesheets/style.css'/>
 
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js'></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+
     <!-- ********** angular libs *********** -->
     <script src='javascripts/scripts/angular.js'></script>
     <script src='javascripts/scripts/angular-ui-router.js'></script>
     <script src='javascripts/scripts/angular-animate.js'></script>
     <script src='javascripts/scripts/angular-messages.js'></script>
 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js'></script>
     <!-- ************ angular build *********** -->
     <script src='javascripts/app.js'></script>
     <script src='javascripts/config.js'></script>
